# nguyenvinhan

./: Makefile  README.md  pyproject.toml  requirements-cpu.lock.example.txt  requirements-cpu.txt  requirements-dev.txt  requirements-gpu-cu12.txt  requirements-quantum-extra.txt  temp.sh
benchmarks/: collect_results.py  run_comparison_matrix.sh  run_full_apptainer_gpu.sh  run_full_cpu.sh  run_local_apptainer.sh  run_local_cpu.sh  run_local_mpi.sh
containers/: Dockerfile.cpu  Dockerfile.gpu  apptainer-cudaq.def  apptainer-gpu-qiskit.def  apptainer-hpc-mpi.def
docs/: acceptance_checklist.md  architecture.md  benchmark_methodology.md  current_code_review.md  final_report_vi.md  gap_analysis.md  how_to_interpret_results.md  how_to_run_on_hpc.md  mig_mps_k8s_notes.md  mpi_rdma_notes.md  report_outline_vi.md  reproducibility_security.md  tai_lieu_chi_tiet_vi.md
k8s/: README.md  gpu-comparison-job.yaml  gpu-pod-smoke-test.yaml  gpu-quantum-job.yaml  nccl-multigpu-job.yaml  rdma-sriov-network-attachment-example.yaml
scripts/: check_host_hpc.sh  collect_gpu_evidence.sh  collect_mpi_evidence.sh  collect_security_evidence.sh  collect_slurm_evidence.sh  generate_sbom.sh  mig_report.sh  run_docker_gpu.sh  run_podman_gpu.sh  security_scan.sh  start_mps.sh  stop_mps.sh  validate_project.sh
slurm/: run_ai_train_gpu.sbatch  run_cudaq.sbatch  run_energy_gpu.sbatch  run_full_suite_gpu.sbatch  run_gpu_qiskit.sbatch  run_mpi_apptainer.sbatch  run_mpi_bench.sbatch  run_mps_two_tasks.sbatch  run_nccl_torchrun.sbatch  run_quantum_suite.sbatch
tests/: test_ai_optional.py  (+11 more)
(+20 files in other folders)
